# portfolio

./: .flaskenv  .gitignore  README.md  dockerfile  makefile  pyproject.toml
django_portfolio/django_portfolio/: settings.py  urls.py
django_portfolio/home/: views.py
django_portfolio/templates/: base.html
django_portfolio/templates/home/: index.html
flask_server/templates/: base.html  index.html
personal_portfolio/: settings.py
src/flask_server/: app.py
src/flask_server/static/css/: template-css.css
src/flask_server/static/sass/: nord.scss
src/flask_server/templates/: base.html  index.html
