[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "Poetry env for portfolio project"
authors = ["goochs <goochseth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
